2A/05_Projet_GL/src/test/deca/context/valid/complet/31_init_filed_sous_type_complexe.deca
// Description :
// Test valide contextulle
// Resultats :
//    Arbre avec décoration 
// Historique : 
//  cree le 18/01/2024

class A {

}

class B extends A {

}

class C extends B {

}

class D {
    A a = new C();
}