2A/05_Projet_GL/src/test/deca/context/invalid/complet/02_super_classe_define_apres.deca
// Description :
//      super classe non define 
// Resultats :
//    ligne 8 :  classe C n'est pas définie
// Historique :
//  cree le 16/01/2024

class D extends C {

}

class C {
    
}